begin adjusting desktop styles

--- a/packages/private-design-output/src/example.html
+++ b/packages/private-design-output/src/example.html
@@ -13,42 +13,42 @@
 
     <header class="new-header">
       <div class="new-header__wrapper">
-
-      <div class="new-header__menu-toggle">
-        <button class="main-nav__toggle main-nav__menu-toggle"><span class="uq-icon uq-icon--standard--navigation-menu uq-icon--light"></span></button>
-      </div>
-      <div class="new-header__logo">
-        <a class="logo--large gtm-processed" href="https://www.uq.edu.au/">
-          <img alt="The University of Queensland" src="https://static.uq.net.au/v11/logos/corporate/uq-logo--reversed.svg">
-        </a>
-      </div>
-      <div class="new-header__search-toggle">
-        <button class="main-nav__toggle main-nav__search-toggle"><span class="uq-icon uq-icon--standard--search uq-icon--light"></span></button>
-      </div>
-      <div class="new-header__main-nav-wrapper">
-        <nav class="new-header__main-nav">
-          <ul class="new-header__main-nav-list">
-            <li><a class="new-header__main-nav-link" href="https://future-students.uq.edu.au/" class="gtm-processed">Study</a>
-              <ul class="mega-menu">
-                <li><a class="new-header__main-nav-link" href="#">Overview</a></li>
-                <li><a class="new-header__main-nav-link" href="#">Study Areas</a>
-                  <ul>
-                    <li><a class="new-header__main-nav-link" href="#">Find a course or program</a></li>
-                    <li><a class="new-header__main-nav-link" href="#">Browse study areas</a></li>
-                    <li><a class="new-header__main-nav-link" href="#">Study</a></li>
-                    <li><a class="new-header__main-nav-link" href="#">Study</a></li>
-                    <li><a class="new-header__main-nav-link" href="#">How to apply</a></li>
-                  </ul>
-                </li>
-                <li><a class="new-header__main-nav-link" href="#">UQ life</a></li>
-                <li><a class="new-header__main-nav-link" href="#">Information for</a></li>
-              </ul>
-            </li>
-            <li><a class="new-header__main-nav-link" href="https://research.uq.edu.au/" class="gtm-processed">Research</a></li>
-            <li><a class="new-header__main-nav-link" href="https://global-engagement.uq.edu.au/partnerships" class="gtm-processed">Partners and Community</a></li>
-            <li><a class="new-header__main-nav-link" href="https://about.uq.edu.au/" class="gtm-processed">About</a></li>
-          </ul>
-        </nav>
+        <div class="new-header__menu-toggle">
+          <button class="main-nav__toggle main-nav__menu-toggle"><span class="uq-icon uq-icon--standard--navigation-menu uq-icon--light"></span></button>
+        </div>
+        <div class="new-header__logo">
+          <a class="logo--large gtm-processed" href="https://www.uq.edu.au/">
+            <img alt="The University of Queensland" src="https://static.uq.net.au/v11/logos/corporate/uq-logo--reversed.svg">
+          </a>
+        </div>
+        <div class="new-header__search-toggle">
+          <button class="main-nav__toggle main-nav__search-toggle"><span class="uq-icon uq-icon--standard--search uq-icon--light"></span> <div class="search-toggle__label">Search</div></button>
+        </div>
+        <div class="new-header__main-nav-wrapper">
+          <nav class="new-header__main-nav">
+            <ul class="new-header__main-nav-list">
+              <li><a class="new-header__main-nav-link" href="https://future-students.uq.edu.au/" class="gtm-processed">Study</a>
+                <ul class="mega-menu">
+                  <li><a class="new-header__main-nav-link" href="#">Overview</a></li>
+                  <li><a class="new-header__main-nav-link" href="#">Study Areas</a>
+                    <ul>
+                      <li><a class="new-header__main-nav-link" href="#">Find a course or program</a></li>
+                      <li><a class="new-header__main-nav-link" href="#">Browse study areas</a></li>
+                      <li><a class="new-header__main-nav-link" href="#">Study</a></li>
+                      <li><a class="new-header__main-nav-link" href="#">Study</a></li>
+                      <li><a class="new-header__main-nav-link" href="#">How to apply</a></li>
+                    </ul>
+                  </li>
+                  <li><a class="new-header__main-nav-link" href="#">UQ life</a></li>
+                  <li><a class="new-header__main-nav-link" href="#">Information for</a></li>
+                </ul>
+              </li>
+              <li><a class="new-header__main-nav-link" href="https://research.uq.edu.au/" class="gtm-processed">Research</a></li>
+              <li><a class="new-header__main-nav-link" href="https://global-engagement.uq.edu.au/partnerships" class="gtm-processed">Partners and Community</a></li>
+              <li><a class="new-header__main-nav-link" href="https://about.uq.edu.au/" class="gtm-processed">About</a></li>
+            </ul>
+          </nav>
+        </div>
       </div>
       <div class="new-header__black-nav-wrapper">
         <nav class="new-header__black-nav">
@@ -68,7 +68,7 @@
           </ul>
         </nav>
       </div>
-    </div>
+      
     </header>
     <!-- <header class="uq-header new-header">
       <div class="uq-header__container">
