--- a/packages/private-design-output/src/example.html
+++ b/packages/private-design-output/src/example.html
@@ -89,6 +89,11 @@
           </ul>
         </nav>
       </div>
+      <div class="new-header__megamenu-wrapper">
+        <div class="new-header__megamenu">
+          <h2>MEGAMENU</h2>
+        </div>
+      </div>
       
     </header>
     <!-- <header class="uq-header new-header">
