--- a/packages/private-design-output/src/example.html
+++ b/packages/private-design-output/src/example.html
@@ -14,7 +14,7 @@
     <header class="new-header">
       <div class="new-header__wrapper">
         <div class="new-header__menu-toggle">
-          <button class="main-nav__toggle main-nav__menu-toggle"><span class="uq-icon uq-icon--standard--navigation-menu uq-icon--light"></span></button>
+          <button type="button" class="main-nav__toggle main-nav__menu-toggle slide-menu__control" data-target="global-mobile-nav" data-action="toggle"><span class="uq-icon uq-icon--standard--navigation-menu uq-icon--light"></span></button>
         </div>
         <div class="new-header__logo">
           <a class="logo--large gtm-processed" href="https://www.uq.edu.au/">
@@ -24,6 +24,95 @@
         <div class="new-header__search-toggle">
           <button class="main-nav__toggle main-nav__search-toggle"><span class="uq-icon uq-icon--standard--search uq-icon--light"></span> <div class="search-toggle__label">Search</div></button>
         </div>
+        <nav class="slide-menu global-mobile-nav" id="global-mobile-nav">
+          <div class="controls">
+            <button type="button" class="btn slide-menu__control" data-action="close">Close</button>
+          </div>
+          <ul>
+            <li>
+              <a href="#">Study</a>
+              <ul>
+                <li>
+                  <a href="#">Study options</a>
+                  <ul>
+                    <li><a href="#">Find a course or program</a></li>
+                    <li><a href="#">Browse study areas</a></li>
+                    <li><a href="#">Why choose UQ</a></li>
+                    <li><a href="#">Enriching student experience</a></li>
+                    <li><a href="#">Study options & course types</a></li>
+                    <li><a href="#">Scholarships</a></li>
+                    <li><a href="#">Life at UQ & accommodation</a></li>
+                    <li><a href="#">How to apply</a></li>
+                    <li><a href="#">Campus, maps & transports</a></li>
+                    <li><a href="#">Events for prospective students</a></li>
+                    <li><a href="#">Starting university</a></li>
+                  </ul>
+                </li>
+                <li>
+                  <a href="#">Information for</a>
+                  <ul>
+                    <li><a href="#">International students</a></li>
+                    <li><a href="#">Internation agents</a></li>
+                    <li><a href="#">High school students</a></li>
+                    <li><a href="#">Mature students</a></li>
+                    <li><a href="#">Postgraduate research (HDR) students</a></li>
+                    <li><a href="#">Aboriginal and Torres Strat Islander students</a></li>
+                    <li><a href="#">Study abroad and exchange students</a></li>
+                    <li><a href="#">Teachers and guidance counsellors</a></li>
+                    <li><a href="#">Parents and guardians</a></li>
+                    <li><a href="#">Current students (login)</a></li>
+                  </ul>
+                </li>
+              </ul>
+            </li>
+            <li>
+              <a href="#">Research</a>
+              <ul>
+                <li>
+                  <a href="#">Research options</a>
+                  <ul>
+                    <li><a href="#">Find a course or program</a></li>
+                    <li><a href="#">Browse study areas</a></li>
+                    <li><a href="#">Why choose UQ</a></li>
+                    <li><a href="#">Enriching student experience</a></li>
+                    <li><a href="#">Study options & course types</a></li>
+                    <li><a href="#">Scholarships</a></li>
+                  </ul>
+                </li>
+                <li>
+                  <a href="#">Information for</a>
+                  <ul>
+                    <li><a href="#">International students</a></li>
+                    <li><a href="#">Internation agents</a></li>
+                    <li><a href="#">High school students</a></li>
+                    <li><a href="#">Mature students</a></li>
+                    <li><a href="#">Postgraduate research (HDR) students</a></li>
+                    <li><a href="#">Aboriginal and Torres Strat Islander students</a></li>
+                    <li><a href="#">Study abroad and exchange students</a></li>
+                    <li><a href="#">Teachers and guidance counsellors</a></li>
+                  </ul>
+                </li>
+              </ul>
+            </li>
+            <li>
+              <a href="#">Partners and community</a>
+            </li>
+            <li>
+              <a href="#">About</a>
+            </li>
+            <li  class="new-header__black-nav-item">
+              <a class="new-header__black-nav-link" href="#">News</a>
+            </li>
+            <li  class="new-header__black-nav-item">
+              <a class="new-header__black-nav-link" href="#">Events</a>
+            </li>
+            <li  class="new-header__black-nav-item">
+              <a class="new-header__black-nav-link" href="#">Give</a>
+            </li>
+            <li  class="new-header__black-nav-item">
+              <a class="new-header__black-nav-link" href="#">Directories</a>
+            </li>  
+        </nav>
         <div class="new-header__main-nav-wrapper">
           <nav class="new-header__main-nav">
             <ul class="new-header__main-nav-list">
@@ -597,5 +686,18 @@
       // Initialise accordions
       new uq.accordion();
     </script>
+    <script>
+      document.addEventListener('DOMContentLoaded', function() {
+        const menuLeftElem = document.getElementById('global-mobile-nav');
+
+        const menuLeft = new SlideMenu(menuLeftElem, {
+          position: 'left',
+          submenuLinkAfter: ' ',
+          backLinkBefore: ' ',
+        });
+
+      });
+    </script>
+    <script type="text/javascript" src="js/slide-menu.js"></script></body>
   </body>
 </html>
