header js cleanup, megamenu styling tweaks

--- a/packages/private-design-output/src/example.html
+++ b/packages/private-design-output/src/example.html
@@ -167,15 +167,16 @@
                     <a href="#" class="megamenu__overview-link">Research overview</a>
                     <div class="megamenu__row">
                       <div class="megamenu__column">
-                        <div class="megamenu__heading">Research options</div>
+                        <div class="megamenu__heading">Heading TBC</div>
                         <nav class="megamenu__menu">
                           <ul>
-                            <li><a href="#">Find a course or program</a></li>
-                            <li><a href="#">Browse study areas</a></li>
-                            <li><a href="#">Why choose UQ</a></li>
-                            <li><a href="#">Enriching student experience</a></li>
-                            <li><a href="#">Study options & course types</a></li>
-                            <li><a href="#">Scholarships</a></li>
+                            <li><a href="#">Research excellence and impact</a></li>
+                            <li><a href="#">Faculties, schools, intitutues & centres</a></li>
+                            <li><a href="#">Research facilities</a></li>
+                            <li><a href="#">Find a researcher or supervisor</a></li>
+                            <li><a href="#">Research degrees and graduate students</a></li>
+                            <li><a href="#">Industry research collaboration</a></li>
+                            <li><a href="#">Be a research participant or volunteer</a></li>
                           </ul>
                         </nav>
                       </div>
@@ -183,37 +184,94 @@
                         <div class="megamenu__heading">Information for</div>
                         <nav class="megamenu__menu">
                           <ul>
-                            <li><a href="#">International students</a></li>
-                            <li><a href="#">Internation agents</a></li>
-                            <li><a href="#">High school students</a></li>
-                            <li><a href="#">Mature students</a></li>
-                            <li><a href="#">Postgraduate research (HDR) students</a></li>
-                            <li><a href="#">Aboriginal and Torres Strat Islander students</a></li>
-                            <li><a href="#">Study abroad and exchange students</a></li>
-                            <li><a href="#">Teachers and guidance counsellors</a></li>
-                          </ul>
-                        </nav>
-                      </div>
-                      <div class="megamenu__column">
-                        <div class="megamenu__heading">Information for</div>
-                        <nav class="megamenu__menu">
-                          <ul>
-                            <li><a href="#">International students</a></li>
-                            <li><a href="#">Internation agents</a></li>
-                            <li><a href="#">High school students</a></li>
-                            <li><a href="#">Mature students</a></li>
-                            <li><a href="#">Postgraduate research (HDR) students</a></li>
-                            <li><a href="#">Aboriginal and Torres Strat Islander students</a></li>
-                            <li><a href="#">Study abroad and exchange students</a></li>
-                            <li><a href="#">Teachers and guidance counsellors</a></li>
+                            <li><a href="#">Future research students</a></li>
+                            <li><a href="#">New research students</a></li>
+                            <li><a href="#">Current research students</a></li>
+                            <li><a href="#">Prospective research partners</a></li>
+                            <li><a href="#">Commuinity facilities and services</a></li>
+                            <li><a href="#">Policies and procedures</a></li>
+                            <li><a href="#">Key initiatives</a></li>
                           </ul>
                         </nav>
                       </div>
                     </div>
                   </div>
-              </div></li>
-              <li><a class="new-header__main-nav-link" href="https://global-engagement.uq.edu.au/partnerships" class="gtm-processed">Partners and Community</a></li>
-              <li><a class="new-header__main-nav-link" href="https://about.uq.edu.au/" class="gtm-processed">About</a></li>
+                </div>
+              </li>
+              <li><a class="new-header__main-nav-link" href="https://global-engagement.uq.edu.au/partnerships" class="gtm-processed">Partners and Community</a>
+                <div class="new-header__megamenu-wrapper">
+                  <div class="new-header__megamenu">
+                    <a href="#" class="megamenu__overview-link">Parners and Community overview</a>
+                    <div class="megamenu__row">
+                      <div class="megamenu__column">
+                        <div class="megamenu__heading">Heading TBC</div>
+                        <nav class="megamenu__menu">
+                          <ul>
+                            <li><a href="#">xxxxxxxxx</a></li>
+                            <li><a href="#">xxxxxxxxx</a></li>
+                            <li><a href="#">xxxxxxxxx</a></li>
+                            <li><a href="#">xxxxxxxxx</a></li>
+                            <li><a href="#">xxxxxxxxx</a></li>
+                            <li><a href="#">xxxxxxxxx</a></li>
+                            <li><a href="#">xxxxxxxxx</a></li>
+                          </ul>
+                        </nav>
+                      </div>
+                      <div class="megamenu__column">
+                        <div class="megamenu__heading">Heading TBC</div>
+                        <nav class="megamenu__menu">
+                          <ul>
+                            <li><a href="#">xxxxxxxxx</a></li>
+                            <li><a href="#">xxxxxxxxx</a></li>
+                            <li><a href="#">xxxxxxxxx</a></li>
+                            <li><a href="#">xxxxxxxxx</a></li>
+                            <li><a href="#">xxxxxxxxx</a></li>
+                            <li><a href="#">xxxxxxxxx</a></li>
+                            <li><a href="#">xxxxxxxxx</a></li>
+                          </ul>
+                        </nav>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </li>
+              <li><a class="new-header__main-nav-link" href="https://about.uq.edu.au/" class="gtm-processed">About</a>
+                <div class="new-header__megamenu-wrapper">
+                  <div class="new-header__megamenu">
+                    <a href="#" class="megamenu__overview-link">About overview</a>
+                    <div class="megamenu__row">
+                      <div class="megamenu__column">
+                        <div class="megamenu__heading">Heading TBC</div>
+                        <nav class="megamenu__menu">
+                          <ul>
+                            <li><a href="#">zzzzzzzzz</a></li>
+                            <li><a href="#">zzzzzzzzz</a></li>
+                            <li><a href="#">zzzzzzzzz</a></li>
+                            <li><a href="#">zzzzzzzzz</a></li>
+                            <li><a href="#">zzzzzzzzz</a></li>
+                            <li><a href="#">zzzzzzzzz</a></li>
+                            <li><a href="#">zzzzzzzzz</a></li>
+                          </ul>
+                        </nav>
+                      </div>
+                      <div class="megamenu__column">
+                        <div class="megamenu__heading">Heading TBC</div>
+                        <nav class="megamenu__menu">
+                          <ul>
+                            <li><a href="#">zzzzzzzzz</a></li>
+                            <li><a href="#">zzzzzzzzz</a></li>
+                            <li><a href="#">zzzzzzzzz</a></li>
+                            <li><a href="#">zzzzzzzzz</a></li>
+                            <li><a href="#">zzzzzzzzz</a></li>
+                            <li><a href="#">zzzzzzzzz</a></li>
+                            <li><a href="#">zzzzzzzzz</a></li>
+                          </ul>
+                        </nav>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </li>
             </ul>
           </nav>
         </div>
@@ -488,36 +546,25 @@
     </div>
 
     <!-- alert -->
-    <div class="uq-alert uq-alert--info" role="alert">
+    <!-- <div class="uq-alert uq-alert--info" role="alert">
       <div class="uq-alert__message">
         <p>This is a default info alert</p>
       </div>
-    </div>
-    <div class="uq-alert uq-alert--success" role="alert">
-      <div class="uq-alert__message">
-        <p>This is a success alert</p>
-      </div>
-    </div>
-    <div class="uq-alert uq-alert--warning" role="alert">
-      <div class="uq-alert__message">
-        <p>This is a warning alert</p>
-      </div>
-    </div>
-    <div class="uq-alert uq-alert--error" role="alert">
-      <div class="uq-alert__message">
-        <p>This is a error alert</p>
-      </div>
-    </div>
-    <br />
-    <br/>
+    </div> -->
 
-    <!-- Print utilities -->
-    <div class="show-for-print">
-      <p>Show this element when printing</p>
-    </div>
-    <div class="hide-for-print">
-      <p>Hide this element when printing</p>
-    </div>
+    <section class="uq-section" aria-label="section title">
+      <div class="uq-section__container">
+        <div class="uq-section__header">
+          <h2 class="uq-section__title"><!--section title--></h2>
+        </div>
+        <div class="uq-section__content">
+          <p>Vel felis elementum egestas id a at netus donec a suspendisse ad a hac natoque nam suspendisse dolor lorem sem iaculis. Tempor felis vestibulum ullamcorper ultrices aptent a lacinia lobortis sagittis scelerisque ultricies vestibulum a vitae dignissim. Nisi senectus curabitur hac praesent nascetur erat a per parturient non nam sit ut auctor nibh quis consectetur ad fermentum consequat consequat. Non lectus per rutrum ut volutpat scelerisque sem ornare augue dis id sit dui euismod sagittis enim curabitur nisi tristique porttitor cubilia consectetur dictum iaculis a. Fames diam per orci dictumst lectus ac augue mauris rutrum ornare suspendisse platea ullamcorper lacus quam. </p>
+          <p>A semper vestibulum potenti conubia quisque dis volutpat posuere natoque parturient nibh consequat rutrum lectus primis auctor venenatis. Vestibulum id nunc vestibulum dictum vivamus scelerisque hac consectetur ac cubilia a enim conubia ridiculus hendrerit litora leo convallis parturient pretium varius. Feugiat suspendisse felis sed in porta tempor vestibulum eu non dolor ac ridiculus a sed vestibulum sem nascetur ut bibendum. Luctus fermentum quis suspendisse hac sodales consectetur scelerisque ac justo adipiscing neque montes semper a faucibus morbi nec diam magna suspendisse mollis. Vestibulum a condimentum scelerisque eros ad torquent sit est nibh rhoncus vestibulum pretium adipiscing litora. Suspendisse lectus curae fusce et elit orci adipiscing a mauris a mus integer nec parturient sodales ullamcorper mi sed vestibulum sodales convallis. </p>
+          <p>Ultrices hac mauris tempus dictum lorem mi sociis ad ut a ullamcorper at fames purus vestibulum velit ad condimentum parturient sem phasellus nunc aliquam dis. Augue a condimentum magnis mus a potenti a platea scelerisque tristique parturient urna a imperdiet vestibulum rhoncus vel sit a sit aliquam pharetra eu duis bibendum. Nisi lobortis eu ut a vestibulum cum a erat amet primis elit erat lobortis vulputate enim urna mi ullamcorper. Hac pretium adipiscing adipiscing dis gravida adipiscing ullamcorper interdum scelerisque cum arcu nulla semper penatibus molestie lacinia nam donec tristique scelerisque praesent. Viverra sit aptent at rutrum a gravida vel blandit lacus vestibulum ipsum tincidunt maecenas diam accumsan fermentum adipiscing eu adipiscing a curabitur fames luctus adipiscing class dis morbi. Nam eu est malesuada vestibulum aliquet felis a ad diam velit felis iaculis facilisi ac suspendisse purus natoque vel sed posuere rutrum suspendisse a.</p>
+        </div>
+      </div>
+    </section>
+
 
     <footer class="new-footer" data-gtm-category="Footer">
       <div  class="new-footer__reconciliation">
