--- a/packages/private-design-output/src/example.html
+++ b/packages/private-design-output/src/example.html
@@ -22,12 +22,17 @@
           </a>
         </div>
         <div class="new-header__search-toggle">
-          <button class="main-nav__toggle main-nav__search-toggle"><span class="uq-icon uq-icon--standard--search uq-icon--light"></span> <div class="search-toggle__label">Search</div></button>
+          <button class="main-nav__toggle main-nav__search-toggle">
+
+              <span class="uq-icon uq-icon--standard--search uq-icon--light"></span><span class="uq-icon uq-icon--standard--close uq-icon--light"></span> <div class="search-toggle__label">Search</div>
+
+
+          </button>
         </div>
         <nav class="slide-menu global-mobile-nav" id="global-mobile-nav">
-          <div class="controls">
+          <!-- <div class="controls">
             <button type="button" class="btn slide-menu__control" data-action="close">Close</button>
-          </div>
+          </div> -->
           <ul>
             <li>
               <a href="#">Study</a>
@@ -331,6 +336,9 @@
             </ul>
           </nav>
         </div>
+        
+      </div>
+      <div class="new-header__search-wrapper">
         <div class="new-header__search">
           <form>
             <fieldset>
