--- a/packages/private-design-output/src/example.html
+++ b/packages/private-design-output/src/example.html
@@ -637,11 +637,11 @@
         </div>
       </div>
       <div class="new-footer__container">
-        <nav class="new-footer__navigation">
-          <ul class="uq-accordion new-footer__navigation-list new-footer__navigation-level-1">
-            <li class="uq-accordion__item new-footer__navigation-item new-footer__navigation-toggle new-footer__navigation--is-open">
-              <a href="#" class="uq-accordion__toggle new-footer__navigation-link">Media</a>
-              <ul class="uq-accordion__content new-footer__navigation-list new-footer__navigation-level-2">
+        <nav class="new-footer__navigation new-footer--desktop">
+          <ul class="new-footer__navigation-list new-footer__navigation-level-1">
+            <li class="new-footer__navigation-item new-footer__navigation--is-open">
+              <a href="#" class="new-footer__navigation-link">Media</a>
+              <ul class="new-footer__navigation-list new-footer__navigation-level-2">
                 <li class="new-footer__navigation-item">
                   <a href="#" class="new-footer__navigation-link">Media team contacts</a>
                 </li>
@@ -656,8 +656,8 @@
                 </li>
               </ul>
             </li>
-            <li class="uq-accordion__item new-footer__navigation-item new-footer__navigation-toggle">
-              <a href="#" class="uq-accordion__toggle new-footer__navigation-link">Staff</a>
+            <li class=new-footer__navigation-item">
+              <a href="#" class="new-footer__navigation-link">Staff</a>
               <ul class="new-footer__navigation-list new-footer__navigation-level-2">
                 <li class="new-footer__navigation-item">
                   <a href="#" class="new-footer__navigation-link">Jobs at UQ</a>
@@ -673,8 +673,8 @@
                 </li>
               </ul>
             </li>
-            <li class="uq-accordion__item new-footer__navigation-item new-footer__navigation-toggle">
-              <a href="#" class="uq-accordion__toggle new-footer__navigation-link">Current students</a>
+            <li class="new-footer__navigation-item">
+              <a href="#" class="new-footer__navigation-link">Current students</a>
               <ul class="new-footer__navigation-list new-footer__navigation-level-2">
                 <li class="new-footer__navigation-item">
                   <a href="#" class="new-footer__navigation-link">Student login</a>
@@ -693,8 +693,8 @@
                 </li>
               </ul>
             </li>
-            <li class="uq-accordion__item new-footer__navigation-item new-footer__navigation-toggle">
-              <a href="#" class="uq-accordion__toggle new-footer__navigation-link">Library</a>
+            <li class="new-footer__navigation-item">
+              <a href="#" class="new-footer__navigation-link">Library</a>
               <ul class="new-footer__navigation-list new-footer__navigation-level-2">
                 <li class="new-footer__navigation-item">
                   <a href="#" class="new-footer__navigation-link">Library services</a>
@@ -713,9 +713,106 @@
                 </li>
               </ul>
             </li>
-            <li class="uq-accordion__item new-footer__navigation-item new-footer__navigation-toggle">
-              <a href="#" class="uq-accordion__toggle new-footer__navigation-link">Contact us / Find us</a>
+            <li class="new-footer__navigation-item">
+              <a href="#" class="new-footer__navigation-link">Contact us / Find us</a>
               <ul class="new-footer__navigation-list new-footer__navigation-level-2">
+                <li class="new-footer__navigation-item">
+                  <a href="#" class="new-footer__navigation-link">Staff contact directory</a>
+                </li>
+                <li class="new-footer__navigation-item">
+                  <a href="#" class="new-footer__navigation-link">find an expert or researcher</a>
+                </li>
+                <li class="new-footer__navigation-item">
+                  <a href="#" class="new-footer__navigation-link">Browse departments, faculties, institutes and centres</a>
+                </li>
+                <li class="new-footer__navigation-item">
+                  <a href="#" class="new-footer__navigation-link">Campus maps and facilities</a>
+                </li>
+              </ul>
+            </li>
+          </ul>
+        </nav>
+
+        <!-- Mobile Footer Navigation-->
+        <nav class="new-footer__navigation new-footer--mobile">
+          <ul class="uq-accordion new-footer__navigation-list new-footer__navigation-level-1">
+            <li class="uq-accordion__item new-footer__navigation-item new-footer__navigation--is-open">
+              <button href="#" class="uq-accordion__toggle new-footer__navigation-toggle">Media</button>
+              <ul class="uq-accordion__content new-footer__navigation-list new-footer__navigation-level-2">
+                <li class="new-footer__navigation-item">
+                  <a href="#" class="new-footer__navigation-link">Media team contacts</a>
+                </li>
+                <li class="new-footer__navigation-item">
+                  <a href="#" class="new-footer__navigation-link">Find a subject matter expert</a>
+                </li>
+                <li class="new-footer__navigation-item">
+                  <a href="#" class="new-footer__navigation-link">Media pack downloads</a>
+                </li>
+                <li class="new-footer__navigation-item">
+                  <a href="#" class="new-footer__navigation-link">UQ news</a>
+                </li>
+              </ul>
+            </li>
+            <li class="uq-accordion__item new-footer__navigation-item">
+              <button href="#" class="uq-accordion__toggle new-footer__navigation-toggle">Staff</button>
+              <ul class="uq-accordion__content new-footer__navigation-list new-footer__navigation-level-2">
+                <li class="new-footer__navigation-item">
+                  <a href="#" class="new-footer__navigation-link">Jobs at UQ</a>
+                </li>
+                <li class="new-footer__navigation-item">
+                  <a href="#" class="new-footer__navigation-link">Staff login</a>
+                </li>
+                <li class="new-footer__navigation-item">
+                  <a href="#" class="new-footer__navigation-link">2022 strategic plan consultation</a>
+                </li>
+                <li class="new-footer__navigation-item">
+                  <a href="#" class="new-footer__navigation-link">System support</a>
+                </li>
+              </ul>
+            </li>
+            <li class="uq-accordion__item new-footer__navigation-item">
+              <button href="#" class="uq-accordion__toggle new-footer__navigation-toggle">Current students</button>
+              <ul class="uq-accordion__content new-footer__navigation-list new-footer__navigation-level-2">
+                <li class="new-footer__navigation-item">
+                  <a href="#" class="new-footer__navigation-link">Student login</a>
+                </li>
+                <li class="new-footer__navigation-item">
+                  <a href="#" class="new-footer__navigation-link">Program and courses</a>
+                </li>
+                <li class="new-footer__navigation-item">
+                  <a href="#" class="new-footer__navigation-link">Key dates</a>
+                </li>
+                <li class="new-footer__navigation-item">
+                  <a href="#" class="new-footer__navigation-link">Student support</a>
+                </li>
+                <li class="new-footer__navigation-item">
+                  <a href="#" class="new-footer__navigation-link">System support</a>
+                </li>
+              </ul>
+            </li>
+            <li class="uq-accordion__item new-footer__navigation-item">
+              <button href="#" class="uq-accordion__toggle new-footer__navigation-toggle">Library</button>
+              <ul class="uq-accordion__content new-footer__navigation-list new-footer__navigation-level-2">
+                <li class="new-footer__navigation-item">
+                  <a href="#" class="new-footer__navigation-link">Library services</a>
+                </li>
+                <li class="new-footer__navigation-item">
+                  <a href="#" class="new-footer__navigation-link">Search catalogue</a>
+                </li>
+                <li class="new-footer__navigation-item">
+                  <a href="#" class="new-footer__navigation-link">UQ journals</a>
+                </li>
+                <li class="new-footer__navigation-item">
+                  <a href="#" class="new-footer__navigation-link">Library hours</a>
+                </li>
+                <li class="new-footer__navigation-item">
+                  <a href="#" class="new-footer__navigation-link">Library contacts</a>
+                </li>
+              </ul>
+            </li>
+            <li class="uq-accordion__item new-footer__navigation-item">
+              <button href="#" class="uq-accordion__toggle new-footer__navigation-toggle">Contact us / Find us</button>
+              <ul class="uq-accordion__content new-footer__navigation-list new-footer__navigation-level-2">
                 <li class="new-footer__navigation-item">
                   <a href="#" class="new-footer__navigation-link">Staff contact directory</a>
                 </li>
